--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.8",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.21",
+    "@mui/x-data-grid": "^7.8.0",
+    "@react-leaflet/core": "^2.1.0",
     "graphql": "^16.9.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
